--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,10 +13,10 @@ room = "2.6.1"
 datastore = "1.1.1"
 navigationCompose = "2.7.7"
 hiltNavigationCompose = "1.2.0"
-lifecycle = "2.8.0"              # Atualizado do seu 2.6.1
-activityCompose = "1.9.0"          # Atualizado do seu 1.8.0
+lifecycle = "2.8.0"
+activityCompose = "1.9.0"
 composeBom = "2024.09.00"          # Usando a sua versão mais recente
-coreKtx = "1.13.1"               # Atualizado do seu 1.10.1
+coreKtx = "1.13.1"
 
 # --- Testes (Mantendo suas versões) ---
 junit = "4.13.2"
@@ -34,6 +34,7 @@ kotlinxCoroutinesTest = "1.8.1"
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
 
 # --- ACTIVITY & NAVIGATION (COMPOSE) ---
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
