--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+# Força o Gradle a usar o JDK 17 incorporado do Android Studio
+org.gradle.java.home=C\:/Program Files/Android/Android Studio Narval/jbr
