--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ kotlin = "1.9.23"
 kotlinCompilerExtension = "1.5.11" # Compatível com Kotlin 1.9.23
 ksp = "1.9.23-1.0.19"       # KSP para Kotlin 1.9.23
 dokka = "1.9.20" # Versão estável do Dokka
+facebookLogin = "17.0.0" # Ou a versão mais recente
 
 # --- Nossas Bibliotecas ---
 hilt = "2.51.1"
@@ -77,6 +78,9 @@ androidx-navigation-testing = { group = "androidx.navigation", name = "navigatio
 # --- DEBUG ---
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+
+# --- FACEBOOK ---
+facebook-login = { group = "com.facebook.android", name = "facebook-login", version.ref = "facebookLogin" }
 
 # --- Nossos Plugins ---
 [plugins]
