--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.6.1"
 kotlinxCoroutinesTest = "1.8.1"
 turbine = "1.1.0"
+mockk = "1.13.11" # Versão estável do MockK
 
 # --- GOOGLE --
 playServicesAuth = "21.2.0"
@@ -85,6 +86,8 @@ kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-cor
 androidx-navigation-testing = { group = "androidx.navigation", name = "navigation-testing", version.ref = "navigationCompose" }
 # Teste de Flow/Channel (Turbine)
 turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
+# Mocking (MockK)
+mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 
 # --- DEBUG ---
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
